{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 94,
  "lineage": "8479f723-c8ff-9178-c122-c1955e6d70b4",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "mtc_ip_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/da0c5887-9e8b-43b3-83eb-5586c330a121/resourceGroups/mtc-rg/providers/Microsoft.Network/publicIPAddresses/mtc-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.246.82.229",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "mtc-ip",
            "resource_group_name": "mtc-rg",
            "sku": "Basic",
            "tags": {
              "environment": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "mtc-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/da0c5887-9e8b-43b3-83eb-5586c330a121/resourceGroups/mtc-rg/providers/Microsoft.Network/networkInterfaces/mtc-nic",
            "internal_domain_name_suffix": "flczbflrh5tu1j0m4cfm4m2rsd.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/da0c5887-9e8b-43b3-83eb-5586c330a121/resourceGroups/mtc-rg/providers/Microsoft.Network/publicIPAddresses/mtc-ip",
                "subnet_id": "/subscriptions/da0c5887-9e8b-43b3-83eb-5586c330a121/resourceGroups/mtc-rg/providers/Microsoft.Network/virtualNetworks/mtc-vn/subnets/mtc-subnet"
              }
            ],
            "location": "westus2",
            "mac_address": "00-22-48-B8-66-1F",
            "name": "mtc-nic",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "mtc-rg",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/da0c5887-9e8b-43b3-83eb-5586c330a121/resourceGroups/mtc-rg/providers/Microsoft.Compute/virtualMachines/mtc-vm"
          },
          "dependencies": [
            "azurerm_public_ip.mtc-ip",
            "azurerm_resource_group.mtc-rg",
            "azurerm_subnet.mtc-subnet",
            "azurerm_virtual_network.mtc-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "mtc-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/da0c5887-9e8b-43b3-83eb-5586c330a121/resourceGroups/mtc-rg/providers/Microsoft.Network/networkSecurityGroups/mtc-sg",
            "location": "westus2",
            "name": "mtc-sg",
            "resource_group_name": "mtc-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "mtv-dev-rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "103.51.113.10/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "mtc-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/da0c5887-9e8b-43b3-83eb-5586c330a121/resourceGroups/mtc-rg/providers/Microsoft.Network/networkSecurityGroups/mtc-sg/securityRules/mtv-dev-rule",
            "name": "mtv-dev-rule",
            "network_security_group_name": "mtc-sg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "mtc-rg",
            "source_address_prefix": "103.51.113.10/32",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.mtc-sg",
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "mtc-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/da0c5887-9e8b-43b3-83eb-5586c330a121/resourceGroups/mtc-rg/providers/Microsoft.Network/publicIPAddresses/mtc-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.246.82.229",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "mtc-ip",
            "resource_group_name": "mtc-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mtc-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/da0c5887-9e8b-43b3-83eb-5586c330a121/resourceGroups/mtc-rg/providers/Microsoft.Network/virtualNetworks/mtc-vn/subnets/mtc-subnet",
            "name": "mtc-subnet",
            "resource_group_name": "mtc-rg",
            "virtual_network_name": "mtc-vn"
          },
          "dependencies": [
            "azurerm_resource_group.mtc-rg",
            "azurerm_virtual_network.mtc-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "mtc-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/da0c5887-9e8b-43b3-83eb-5586c330a121/resourceGroups/mtc-rg/providers/Microsoft.Network/virtualNetworks/mtc-vn/subnets/mtc-subnet",
            "network_security_group_id": "/subscriptions/da0c5887-9e8b-43b3-83eb-5586c330a121/resourceGroups/mtc-rg/providers/Microsoft.Network/networkSecurityGroups/mtc-sg",
            "subnet_id": "/subscriptions/da0c5887-9e8b-43b3-83eb-5586c330a121/resourceGroups/mtc-rg/providers/Microsoft.Network/virtualNetworks/mtc-vn/subnets/mtc-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.mtc-sg",
            "azurerm_resource_group.mtc-rg",
            "azurerm_subnet.mtc-subnet",
            "azurerm_virtual_network.mtc-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "mtc-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "9590c52a-3f71-4de7-a74c-f08acf339193",
            "id": "/subscriptions/da0c5887-9e8b-43b3-83eb-5586c330a121/resourceGroups/mtc-rg/providers/Microsoft.Network/virtualNetworks/mtc-vn",
            "location": "westus2",
            "name": "mtc-vn",
            "resource_group_name": "mtc-rg",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/da0c5887-9e8b-43b3-83eb-5586c330a121/resourceGroups/mtc-rg/providers/Microsoft.Network/virtualNetworks/mtc-vn/subnets/mtc-subnet",
                "name": "mtc-subnet",
                "security_group": "/subscriptions/da0c5887-9e8b-43b3-83eb-5586c330a121/resourceGroups/mtc-rg/providers/Microsoft.Network/networkSecurityGroups/mtc-sg"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    }
  ]
}